ADD: Moved the shader interactions into a shaderhandler class

--- a/OpenGLSolution/OpenGLSolution/OpenGLSolution.vcxproj
+++ b/OpenGLSolution/OpenGLSolution/OpenGLSolution.vcxproj
@@ -116,9 +116,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="ShaderHandler.cpp" />
     <ClCompile Include="Triangle.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ShaderHandler.h" />
     <ClInclude Include="Triangle.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
