--- a/OpenGLSolution/OpenGLSolution/OpenGLSolution.vcxproj.filters
+++ b/OpenGLSolution/OpenGLSolution/OpenGLSolution.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="TransformNode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Texture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Triangle.h">
@@ -120,6 +123,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TransformNode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Texture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
