Update: Ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,4 @@ OpenGLSolution/OpenGLSolution/Debug/OpenGLSolution.tlog/OpenGLSolution.lastbuild
 OpenGLSolution/OpenGLSolution/Debug/Triangle.obj
 OpenGLSolution/OpenGLSolution/Debug/vc140.idb
 OpenGLSolution/OpenGLSolution/Debug/vc140.pdb
+/OpenGLSolution/.vs/OpenGLSolution/v14/.suo
