--- a/OpenGLSolution/OpenGLSolution/OpenGLSolution.vcxproj.filters
+++ b/OpenGLSolution/OpenGLSolution/OpenGLSolution.vcxproj.filters
@@ -235,6 +235,18 @@
     <None Include="glm\readme.md">
       <Filter>Resource Files\glm</Filter>
     </None>
+    <None Include="lighting.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="lighting.vs">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="lamp.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="lamp.vs">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Image Include="images\bark.jpg">
